# Homework

./: .flake8  .gitignore  .gitignore.py  git_work_1.py  main.py  pyproject.toml
src/: calc.py  clean_names.py  code.py  cool_names.py  masks.py  name_filter.py  processing.py  widget.py
src/data/: name_test_file  result_filter.txt
tests/: test_calc.py  test_code.py
