[project]
name = "homework"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "homework", from = "src"}]


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
mypy = "^1.17.1"
isort = "^6.0.1"


[tool.black]
line-length = 119
exclude = ".git"


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"


[tool.isort]
line_length = 119
profile = "black"
combine_as_imports = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
